--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Cookie - Let's Fish!!!</title>
+<title>Cookie - Let's go fishing!!!</title>
 </head>
 <body style="
     background-repeat: no-repeat;
