--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     font-family: helvetica neue;
     font-weight: 100;
     line-height: 1em;
-">Let's go fishing!</h1>
+">Let's go fishing with cookie!</h1>
 </body>
 </html>
