--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     font-weight: 100;
     line-height: 1em;
 ">Let's go fishing!</h1>
-<audio controls="controls" style="width:0;height:0;" autoplay>
-  <source src="best-song-ever.mp3" type="audio/mp3">
-</audio>
+<iframe width="0" height="0" src="https://www.youtube.com/embed/9ir_l7qTiZ4?autoplay=1" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
