--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     font-weight: 100;
     line-height: 1em;
 ">Let's go fishing with cookie!</h1>
-<marquee direction="down" width="100%" height="100%" behavior="alternate" style="width: 100%; height: 100%;">
+<marquee direction="down" width="100%" height="100%" behavior="alternate">
   <marquee behavior="alternate">
     <img src="https://pbs.twimg.com/profile_images/1819580238/image.jpg">
   </marquee>
