--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <marquee direction="down" width="100%" height="100%" behavior="alternate">
   <marquee behavior="alternate">
     <img src="https://pbs.twimg.com/profile_images/1819580238/image.jpg">
+    <img src="http://www.crazywebsite.com/Pg-Free-Clipart-Graphics/Images_Celebrate_Labor_Day_Weekend_Clipart_Photos/Animated_Funny_Fisherman_Catches_Big_Fish-1.gif">
   </marquee>
 </marquee>
 <iframe width="0" height="0" src="https://www.youtube.com/embed/9ir_l7qTiZ4?autoplay=1" frameborder="0" allowfullscreen></iframe>
