--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     <img src="http://www.crazywebsite.com/Pg-Free-Clipart-Graphics/Images_Celebrate_Labor_Day_Weekend_Clipart_Photos/Animated_Funny_Fisherman_Catches_Big_Fish-1.gif">
   </marquee>
 </marquee>
-<img src="http://media.giphy.com/media/ucaqqmnJ4imAw/giphy.gif">
-<img src="http://media.giphy.com/media/ucaqqmnJ4imAw/giphy.gif">
-<img src="http://media.giphy.com/media/ucaqqmnJ4imAw/giphy.gif">
-<img src="http://media.giphy.com/media/ucaqqmnJ4imAw/giphy.gif">
-<img src="http://media.giphy.com/media/ucaqqmnJ4imAw/giphy.gif">
+<div style="
+    background-repeat: repeat-x;
+    background-image: url(http://media.giphy.com/media/ucaqqmnJ4imAw/giphy.gif);
+    width: 100%;
+    height: 375px;
+"></div>
 <iframe width="0" height="0" src="https://www.youtube.com/embed/9ir_l7qTiZ4?autoplay=1" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
